# Autonomous-Data-Compliance-Officer-Multi-Agent-System

./: .gitignore  Dockerfile  ENV_TEMPLATE.md  LICENSE  PHASE_0_CHECKLIST.md  PHASE_1.1_CHECKLIST.md  PHASE_1.2_CHECKLIST.md  README.md  cursor.json  dashboard.py  deploy_cloud_run.sh  docker-compose.yml  folder_structure.txt  install_gcloud.sh  main.py  pyproject.toml  requirements.txt  setup.sh  setup_phase1.sh  test_chroma_st.py  test_output.txt  test_st.py
.github/workflows/: ci.yml
adk/: __init__.py  config.py  config.yaml
adk/agents/: __init__.py  coordinator.py  critic.py  policy_matcher.py  report_writer.py  risk_scanner.py  watchdog.py
adk/context/: __init__.py
adk/core/: __init__.py  adk_agent.py  base_agent.py  logger.py  message_bus.py  session_service.py  state_manager.py  task_queue.py  workflow_patterns.py
adk/jobs/: __init__.py
adk/models/: __init__.py  database.py  models.py  schema.py  storage.py
app/: __init__.py
data/: state.json
docs/: DEPLOYMENT.md  FAQ.md  PHASE_0_SUMMARY.md  PHASE_1.1_SUMMARY.md  PHASE_1.2_SUMMARY.md  PHASE_1_COMPLETE.md  SETUP.md
evaluation/: __init__.py  evaluate_agents.py  evaluation_report.json  evaluation_report_template.md  metrics_calculator.py  scenarios.py  synthetic_data.json
examples/: parallel_retrieval_demo.py
scripts/: seed_rag.py
tests/: __init__.py  test_adk_integration.py  test_code_executor.py  test_context_engineering.py  test_end_to_end.py  test_multi_turn.py  test_observability.py  test_phase1_2.py  test_real_rag.py  test_real_scanner.py  test_vertex_client.py  test_workflow_patterns.py
(+36 files in other folders)
